mosquitto-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mosquitto-ingress
 spec:
  rules:
  - host: mosquitto.com
    http:
      paths:
      - path: /
        pathType: Exact  
        backend:
          service:
            name: mosquitto-service
            port: 
              number: 80
